--- a/Simple.Smart.Chat.App/wwwroot/css/site.css
+++ b/Simple.Smart.Chat.App/wwwroot/css/site.css
@@ -72,11 +72,14 @@ body {
 
 .msg-holder {
     border-radius: 5px;
+    border-width: 5px!important;
 }
 
  .msg-holder p {
      margin-top: 2px!important;
      margin-bottom: 2px!important;
+     padding-left: 5px;
+     padding-right: 5px;
  }
 
 div#ChatSpace {
